--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section><img src="img/0.png" alt="" width="600" height="500"/></section>
+				<section><img src="img/1.png" alt="" width="600" height="400"/></section>
+				<section><img src="img/2.png" alt="" width="600" height="400"/></section>
+				<section><img src="img/3.png" alt="" width="600" height="400"/></section>
+				<section><img src="img/4.png" alt="" width="800" height="400"/></section>
+				<section><img src="img/5.png" alt="" width="800" height="400"/></section>
+				<section><img src="img/6.png" alt="" width="800" height="400"/></section>
+				<section><img src="img/10.png" alt="" width="600" height="500"/></section>
+				<section><img src="img/11.png" alt="" width="800" height="400"/></section>				
+				<section><img src="img/12.png" alt="" width="800" height="400"/></section>	
+				<section><img src="img/13.png" alt="" width="800" height="400"/></section>	
+                <section><img src="img/14.png" alt="" width="800" height="400"/></section>	
+				<section><img src="img/15.png" alt="" width="800" height="400"/></section>
+				<section><img src="img/16.png" alt="" width="800" height="400"/></section>	
+				<section><img src="img/17.png" alt="" width="800" height="400"/></section>		
 			</div>
 		</div>
 
